Remove ScalaTest Remove Hello Workd ExampleHandlerImpl Change in field parameter example to Example. Add get by name query and make it accept wild cards Change version to "1.0.0"
