# src/main/resources/api.yaml
@@ -3,30 +3,14 @@ info:
   title: DPET API definition
   version: 0.0.1
 tags:
-  - name: hello
+  - name: dpet
 paths:
-  /hello:
+  /example/{forename}/surname/{surname}:
     get:
-      tags: [hello]
-      x-scala-package: hello
-      operationId: getHello
-      summary: Returns a hello message
-      parameters:
-        - $ref: '#/components/parameters/NameParam'
-      responses:
-        200:
-          description: Hello message
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HelloResponse'
-
-  /farewell/{forename}/surname/{surname}:
-    get:
-      tags: [farewell]
-      x-scala-package: farewell
-      operationId: getFarewell
-      summary: Returns a farewell message
+      tags: [example]
+      x-scala-package: example
+      operationId: getExample
+      summary: Returns an example message
       parameters:
         - name: forename
           in: path
@@ -42,11 +26,11 @@ paths:
             type: string
       responses:
         200:
-          description: Farewell message
+          description: Example message
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/FarewellResponse'
+                $ref: '#/components/schemas/ExampleResponse'
 
   /divisions:
     get:
@@ -56,6 +40,7 @@ paths:
       summary: Returns a list of divisions or a division by id
       parameters:
         - $ref: '#/components/parameters/IdParam'
+        - $ref: '#/components/parameters/NameParam'
       responses:
         200:
           description: Divisions message
@@ -69,7 +54,7 @@ components:
     NameParam:
       name: name
       in: query
-      description: Name to greet
+      description: Name of object
       schema:
         type: string
 
@@ -87,7 +72,7 @@ components:
         count:
           type: integer
           format: int32
-        list:
+        divisions:
           type: array
           items:
             type: object
@@ -97,14 +82,7 @@ components:
               name:
                 type: string
 
-    HelloResponse:
-      type: object
-      properties:
-        message:
-          type: string
-      required:
-        - message
-    FarewellResponse:
+    ExampleResponse:
       type: object
       properties:
         message:
